...
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/color"
            android:id="@+id/home_budgetId">



            <TextView
                android:id="@+id/home_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current Budget ${currentBudget}"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_centerInParent="true" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/color"
            android:id="@+id/home_spendId">

            <TextView
                android:id="@+id/home_spend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total Spend ${totalSpend}"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_centerInParent="true" />
...

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/color"
            android:id="@+id/home_total_appId">

            <TextView
                android:id="@+id/home_total_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total number of Subscriptions #{subscriptionCount}"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/color"
            android:id="@+id/home_rem_budgetId">

            <TextView
                android:id="@+id/home_rem_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remaining Budget ${remainingBudget}"
                android:textSize="16sp"
                android:padding="10dp"
                android:layout_centerInParent="true" />
...
