...
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/border_set">

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:padding="10dp"
        android:textAppearance="?attr/textAppearanceListItem"
        android:layout_toStartOf="@+id/delete"/>
    <ImageView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:src="@android:drawable/ic_delete"
        android:layout_alignParentEnd="true"
        />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:padding="10dip"
        android:textAppearance="?attr/textAppearanceListItem"
        />
...
